Sat Nov 18 22:44:37 GMT 2006 (njh)
----------------------------------
 * libclamav:	Don't implement the sleep function
 		Handle DoS attacks on the JS VM by adding a timeout guarding
			against infinite loops

Sat Nov 18 21:46:10 CET 2006 (tk)
---------------------------------
  * libclamav/matcher-ac.c: multipart signatures: give higher priority to new
			    sub-matches

Sat Nov 18 00:51:08 CET 2006 (tk)
---------------------------------
  * libclamav/matcher.c: fix debug message (closes bb#144)

Wed Nov 15 16:18:09 CET 2006 (tk)
---------------------------------
  * libclamav: + the AC matcher now keeps a track of partial matches to improve
		 the accuracy of signatures with range wildcards
	       + add cli_ac_initdata() and cli_ac_freedata()
	       + fix some signedness warnings

Tue Nov 14 13:49:58 GMT 2006 (trog)
-----------------------------------
  * libclamav/ole2_extract.c: Fix Solaris endian issue. (bb#89)
  * libclamav/unrar/unrar.c: Fix FD leak in error path (bb#133, thanks acab)

Sat Nov 11 20:09:07 GMT 2006 (njh)
----------------------------------
  * clamav-milter:	SESSIONS mode: force --external, bug 123

Fri Nov 10 22:41:11 GMT 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Fix compilation error when debug is enabled on BSD,
  				bug 121

Fri Nov 10 20:36:09 GMT 2006 (njh)
----------------------------------
  * clamav-milter:	Added support for HAVE_CTIME_R_3, bug 123

Fri Nov 10 20:18:18 GMT 2006 (njh)
----------------------------------
  * libclamav:	Added portability to the JScript engine

Thu Nov  9 22:15:45 CET 2006 (tk)
---------------------------------
  * libclamav/pe.c: fix incorrect comparison, thanks to aCaB

Thu Nov  9 09:27:31 GMT 2006 (njh)
----------------------------------
  * libclamav/jscript.c:	Fixed a memory leak

Tue Nov  7 18:59:20 CET 2006 (tk)
---------------------------------
  * freshclam/manager.c: fix signedness problem (closes bug#122)

Mon Nov  6 00:12:28 CET 2006 (tk)